--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/start3"
-    tools:context=".Fragment.StartFragment">
+    tools:context=".fragment.StartFragment">
 
     <TextView
         android:layout_width="wrap_content"
