--- a/app/src/main/res/layout/fragment_work_experience.xml
+++ b/app/src/main/res/layout/fragment_work_experience.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.WorkExperienceFragment"
+    tools:context=".fragment.WorkExperienceFragment"
     android:background="@drawable/my_color_gradient">
 
     <TextView
