--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/startFragment">
     <fragment
         android:id="@+id/startFragment"
-        android:name="com.example.appprofile.Fragment.StartFragment"
+        android:name="com.example.appprofile.fragment.StartFragment"
         android:label="fragment_start"
         tools:layout="@layout/fragment_start" >
         <action
@@ -16,7 +16,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.appprofile.Fragment.HomeFragment"
+        android:name="com.example.appprofile.fragment.HomeFragment"
         android:label="Home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/educationLevelFragment2"
-        android:name="com.example.appprofile.Fragment.EducationLevelFragment"
+        android:name="com.example.appprofile.fragment.EducationLevelFragment"
         android:label="Education Level"
         tools:layout="@layout/fragment_education_level" >
         <action
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/workExperienceFragment"
-        android:name="com.example.appprofile.Fragment.WorkExperienceFragment"
+        android:name="com.example.appprofile.fragment.WorkExperienceFragment"
         android:label="Work Experience"
         tools:layout="@layout/fragment_work_experience" >
         <action
