--- a/app/src/main/res/layout/fragment_education_level.xml
+++ b/app/src/main/res/layout/fragment_education_level.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -10,39 +10,39 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragment.EducationLevelFragment"
-        android:background="@drawable/my_color_gradient">
+        android:background="@drawable/my_color_gradient"
+        tools:context=".fragment.EducationLevelFragment">
 
         <TextView
-            android:id="@+id/tvTitle"
+            android:id="@+id/tvTitle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:text="HỌC VẤN"
-            android:textStyle="bold"
-            android:textSize="30sp"
             android:textColor="@color/blue"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_margin="20dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvHv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle1" />
 
         <Button
             android:id="@+id/btnNext2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="@color/blue"
             android:text="Next"
-            app:layout_constraintTop_toBottomOf="@id/rcvHv"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="@color/blue" />
+            app:layout_constraintTop_toBottomOf="@id/rcvHv" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
